@startuml Database Schema
    title Database Schema

    entity audio {
        id
        folder_id
        name
        url
    }
    entity folder {
        id
        name
        cover_url
    }
    entity genre {
        id
        name
    }
    entity author {
        id
        name
    }


    author "n" -- "n" folder
    folder "1" -- "n" audio
    genre "n" -- "n" folder

@enduml